--- a/src/css/player.styl
+++ b/src/css/player.styl
@@ -9,24 +9,23 @@
 		display flex
 
 		.main
-			padding: 0.8rem 0 0.6rem 0;
-			background: linear-gradient(to top right,#000,#0b0c0e);
-			border-radius: 6px 6px 0 0;
-
-			justify-content: center;
-			align-items: center;
+			padding 0.8rem 0 0.6rem 0
+			background linear-gradient(to top right,#000,#0b0c0e)
+			border-radius 6px 0 0 6px
+			justify-content center
+			align-items center
 			flex 0 100%
 
 			h1
-				font-size: .9rem;
-				font-weight: 600;
-				text-transform: uppercase;
-				color: #747474;
+				font-size .9rem
+				font-weight 600
+				text-transform uppercase
+				color #747474
 				padding 0 0 0 1rem
 
 		.block_left
 			display flex
-			justify-content: center;
+			justify-content center
 
 			ul.stats
 				list-style none
