--- a/src/css/player.styl
+++ b/src/css/player.styl
@@ -9,7 +9,7 @@
 		display flex
 
 		.main
-			padding 0.8rem 0 0.6rem 0
+			padding 1rem
 			background linear-gradient(to top right,#000,#0b0c0e)
 			border-radius 6px 0 0 6px
 			justify-content center
@@ -21,7 +21,17 @@
 				font-weight 600
 				text-transform uppercase
 				color #747474
-				padding 0 0 0 1rem
+
+			.acronym
+				text-shadow 0 0 10px var(--teamglow)
+				color var(--teamcolor)
+				font-size .8rem
+				font-weight 600
+
+			.team
+				font-size 1rem
+				color white
+				display none
 
 		.block_left
 			display flex
