--- a/src/css/player.styl
+++ b/src/css/player.styl
@@ -96,3 +96,33 @@
 
 			.avg
 				stroke rgba(white, .75)
+
+
+
+
+.player-stats
+	.result
+		text-transform uppercase
+
+		a
+			padding .2rem
+			border-radius .2rem
+			font-size .6rem
+			font-weight 600
+			color white !important
+			width 26px
+			text-align center
+
+			&:hover
+				box-shadow none !important
+
+			&.w
+				background: #2acb4f;
+				box-shadow: 0 0 10px #2acb4f;
+
+			&.l
+				background: #ec041f;
+				box-shadow: 0 0 10px #ec041f;
+
+			&.t
+				background black
