--- a/views/template/player-nav.pug
+++ b/views/template/player-nav.pug
@@ -4,4 +4,5 @@
 
 		.nav-bar
 			a(href=config.path + "" class=(config.nav.page === 'overview' ? 'active' : '')) Overview
+			a(href=config.path + "/matches" class=(config.nav.page === 'matches' ? 'active' : '')) Matches
 			a(href=config.path + "/seasons" class=(config.nav.page === 'seasons' ? 'active' : '')) Seasons
