--- a/src/css/player.styl
+++ b/src/css/player.styl
@@ -126,3 +126,29 @@
 
 			&.t
 				background black
+
+
+.player-overview
+	.info
+		display block
+		margin-bottom 1rem
+
+		.block
+			display inline-block
+			margin-right 1rem
+			font-size .8rem
+
+			.k
+				display inline-block
+				border-radius 6px 0 0 6px
+				padding .5rem
+				background linear-gradient(to top right,#000,#0b0c0e)
+				color #8b8b8b
+
+			.v
+				display inline-block
+				border-radius 0 6px 6px 0
+				background rgba(#0b0c0e, .75)
+				color white
+				padding .5rem .8rem
+				font-weight 600
