--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -219,7 +219,6 @@
 							flex 0 0 75px
 							padding-right .5rem
 
-
 						&.test
 							justify-content right
 							flex 0 0 110px
@@ -741,6 +740,10 @@
 				&.player
 					justify-content left
 
+				&.name
+					justify-content left
+					padding-left .4rem
+
 				&.date
 					justify-content right
 					text-align right
@@ -775,13 +778,13 @@
 
 				.date
 				.player
+				.name
 					a
 						color #538cff
 						box-shadow inset 0 -2px 0 0 #538cff33
 
 						&:hover
 							box-shadow none
-
 
 
 .schedule
