--- a/views/player-dash.pug
+++ b/views/player-dash.pug
@@ -39,7 +39,7 @@ include template/player-nav.pug
 							.item.rank= n.rank
 							.item.name
 								a(
-									href="https://unfortunate-maps.jukejuice.com/show/" + n.unfortunateid
+									href="https://fortunatemaps.herokuapp.com/map/" + n.unfortunateid
 								)= n.map
 							.item.value= n.winrate
 
