--- a/views/superleague-matches.pug
+++ b/views/superleague-matches.pug
@@ -55,7 +55,7 @@ include template/superleague-nav.pug
 										- let match_title = (k === 'Final') ? i.date : 'Match ' + mk
 										.top= round_title
 										.bot= match_title
-									.stats.hold Hold
+									.stats.hold Possession
 									.stats.winning Leading
 									.stats.mvb
 										svg(viewBox="0 0 24 24")
