--- a/views/superleague-overview.pug
+++ b/views/superleague-overview.pug
@@ -62,7 +62,8 @@ include template/superleague-nav.pug
 
 						.content
 
-						a(href="https://www.youtube.com/watch?v=hios5eKr0-E").watchfinal Watch Final
+						// a(href="https://www.youtube.com/watch?v=hios5eKr0-E").watchfinal Watch Final
+						a(href="#").watchfinal ???
 
 
 				// playoff champions
