--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -22,6 +22,9 @@ html
 			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
 				span NF
 
+			a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
+				span EGG
+
 			a(href="#" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
 
