--- a/views/superleague-matches.pug
+++ b/views/superleague-matches.pug
@@ -12,7 +12,7 @@ include template/superleague-nav.pug
 			.schedule-league
 				each n, date in schedule
 					.day
-						h3 #{date} 8:00PM GMT
+						h3 #{date}
 
 						each i, k in n.round
 							.games
