--- a/views/player-dash.pug
+++ b/views/player-dash.pug
@@ -15,6 +15,11 @@ include template/player-nav.pug
 					.v
 						span= winratio
 
+				.block.cost
+					.k Avg Cost
+					.v
+						span= cost
+
 		.stats.leaders
 			if topseasons
 				.stat
