--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -7,7 +7,7 @@ html
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
 		script(src='/init.js', async)
-		script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
+		//script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
 	body
 		.background
 
@@ -25,7 +25,7 @@ html
 			a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
 				span EGG
 
-			a(href="#" class=(config.nav.cat === 'players' ? 'active' : ''))
+			a(href="/player" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
 
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
