--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -194,6 +194,7 @@ body
 	border-bottom 1px solid #ffffff0a
 	width 100%
 	margin-bottom 1rem
+	display flex
 
 	a
 		font-size .9rem
@@ -207,6 +208,9 @@ body
 		&:hover
 			color #1adbd4
 			box-shadow inset 0 -2px 0 #1adbd4
+
+	.league + .playoff
+		margin-left auto
 
 .contain
 	box-shadow inset 0 .5rem .5rem -.5rem var(--glow), 0 -.5rem .5rem -.5rem var(--glow)
