--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -26,8 +26,8 @@ html
 			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
 				span NF
 
-			a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
-				span EGG
+			// a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
+			// 	span EGG
 
 			a(href="/player" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
@@ -35,8 +35,8 @@ html
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 			// 	span Leaderboard
 
-			.right
-				input(type="text", placeholder="Search", name="tagpro.dev search")
+			// .right
+			// 	input(type="text", placeholder="Search", name="tagpro.dev search")
 
-				a(href="#")
-					span Login
+			// 	a(href="#")
+			// 		span Login
