--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -6,10 +6,9 @@ html
 		link(rel='stylesheet', href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap")
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
-		script(src='/init.js', async)
-		script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
+		script(defer, src='/init.js')
+		// script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
 
-	//-- used for player page, hiding border
 	body(
 		class= config.nav.cat
 	)
