--- a/views/template/player-nav.pug
+++ b/views/template/player-nav.pug
@@ -6,3 +6,6 @@
 			a(href=config.path + "" class=(config.nav.page === 'overview' ? 'active' : '')) Overview
 			a(href=config.path + "/matches" class=(config.nav.page === 'matches' ? 'active' : '')) Matches
 			a(href=config.path + "/seasons" class=(config.nav.page === 'seasons' ? 'active' : '')) Seasons
+			// a(href=config.path + "/allies" class=(config.nav.page === 'allies' ? 'active' : '')) Allies
+			// a(href=config.path + "/opponents" class=(config.nav.page === 'opponents' ? 'active' : '')) Opponents
+			// a(href=config.path + "/maps" class=(config.nav.page === 'maps' ? 'active' : '')) Maps
