--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -7,7 +7,7 @@ html
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
 		script(defer, src='/init.js')
-		script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
+		// script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
 
 	body(
 		class= config.nav.cat
@@ -24,6 +24,10 @@ html
 
 			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
 				span NF
+
+
+			a(href="/ecltp/8" class=(config.nav.cat === 'ecltp' ? 'active' : ''))
+				span ECLTP
 
 			// a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
 			// 	span EGG
