--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -48,18 +48,19 @@ svg(height="1px" width="1px")
 
 			.col
 				.hd Resources
-				a(href="#") Frequently Asked Questions
 				// a(href="#") Changelog
 				// a(href="#") Feedback
-				a(href="https://reddit.com/r/TagPro") TagPro Subreddit
 				a(href="https://discord.com/invite/uJxUcSR") Discord
+				a(href="https://twitch.com/tpsuperleague") Twitch
+				a(href="https://reddit.com/r/TagPro") Subreddit
 
 			.col
 				.hd Important
+				a(href="#") FAQ
 				a(href="#") Rules
+				a(href="#") Feedback
 
 			.col
-
 				.hd Who
 				a(href="#") About
 				a(href="#") Contact
