--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -43,7 +43,6 @@
 		.pane
 			margin-bottom 1rem
 			border-radius 6px 6px 0 0
-			background #0b0c0e
 
 			.headline
 				padding .8rem 0 .6rem 0
@@ -136,6 +135,20 @@
 									position relative
 									top 1px
 
+			.crowned + .league
+				margin-top 1rem
+
+			.league
+
+				.headline
+					border-radius 6px
+
+					svg
+						fill url(#silver.trophy)
+
+					.text
+						color #ddd
+
 
 			&.final
 				flex-direction column
@@ -187,6 +200,11 @@
 
 
 			&.mvb
+
+				.container
+					border-radius 6px
+					background #0b0c0e
+
 				svg
 					fill url(#gold.mainGradient)
 					width 1.1rem
