--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -45,22 +45,21 @@ svg(height="1px" width="1px")
 			.col
 				//- .logo [logo]
 				.title TP Super League
-
-			.col
-				.hd Resources
-				// a(href="#") Changelog
-				// a(href="#") Feedback
-				a(href="https://discord.com/invite/uJxUcSR") Discord
-				a(href="https://twitch.com/tpsuperleague") Twitch
-				a(href="https://reddit.com/r/TagPro") Subreddit
+				.desc An alternative TagPro league for Europeans. Founded by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
 
 			.col
 				.hd Important
+				a(href="/rules") Rules
 				a(href="#") FAQ
-				a(href="#") Rules
-				a(href="#") Feedback
 
 			.col
 				.hd Who
 				a(href="#") About
-				a(href="#") Contact
+				a(href="#") Changelog
+				a(href="#") Feedback
+
+			.col
+				.hd Resources
+				a(href="https://discord.com/invite/uJxUcSR") Discord
+				a(href="https://twitch.com/tpsuperleague") Twitch
+				a(href="https://reddit.com/r/eltp") Subreddit
