--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -295,6 +295,23 @@ body
 		text-shadow 0 0 15px rgba(#e4c7616b, .25)
 		color: #e4c761;
 
+	.desc
+		font-size .8rem
+		font-weight 500
+		line-height 1.1rem
+		color #8b8b8b
+		width 80%
+
+		a
+			text-decoration none
+			padding-bottom .2rem
+			color: #858585;
+			box-shadow: inset 0 -2px 0 0 #87878729
+
+			&:hover
+				color #538cff
+				box-shadow none
+
 	.hd
 		text-transform uppercase
 		font-weight 500
@@ -309,7 +326,7 @@ body
 		height 200px
 		line-height 2rem
 
-		a
+		> a
 			display block
 			color white
 			padding-left .5rem
